--- a/wiki/BootstrapperTutorial.wiki
+++ b/wiki/BootstrapperTutorial.wiki
@@ -55,6 +55,33 @@ The strategy defines the order of execution for extension points and behaviors. 
 }}}
 The strategy above would configure the applications startup and shutdown phase to:
  * During startup call the extension point `Start` on all registered extensions
- * During shutdown call the extension point `Shutdown`on all registered extensions
- Now let's look how the custom extension interface and the strategy get combined together in the bootstrapper.
+ * During shutdown call the extension point `Shutdown` on all registered extensions
+Now let's look how the custom extension interface and the strategy get combined together in the bootstrapper.
+== Bootstrapper setup ==
+The bootstrapper setup is simply and straight forward. You can always follow the following steps:
+ # Instantiate a new DefaultBoostrapper<TExtension>
+ # Instantiate a new strategy
+ # Initialize the bootstrapper with the strategy
+ # Add the required extensions
+ # Call `Run` when the application starts
+ # Call `Shutdown` and then `Dispose` when the application stops.
+
+{{{
+	using(var bootstrapper = new DefaultBootstrapper<ICustomExtension>())
+	{
+		var strategy = new CustomStrategy();
+		bootstrapper.Initialize(strategy);
+
+		bootstrapper.AddExtension(new FirstCustomExtension());
+		bootstrapper.AddExtension(...);
+		bootstrapper.AddExtension(new NthCustomExtension());
+
+		bootstrapper.Run();
+		
+		// When application finished call
+		
+		bootstrapper.Shutdown();
+	}
+}}}
+_Note:`DefaultBootstrapper{TExtension}` and `AbstractStrategy{TExtension}` implement `IDisposable`. The bootstrapper takes care of disposing the strategy and the extensions if the correct behavior is attached. If you are using FxCop to check your compiled code it will produces warnings that you should dispose the strategy and the extensions which implement `IDisposable` before the references move out of scope. You can safely suppress these warning._
 = Customization =
