--- a/wiki/BootstrapperTutorial.wiki
+++ b/wiki/BootstrapperTutorial.wiki
@@ -336,6 +336,36 @@ TODO
 == ExtensionConfigurationSection ==
 TODO
 = Reporting =
-TODO
+The reporting mechanism allows to create a full report of the bootstrapping process. To be able to report the bootstrapping process the process must actually run and a reporter must be present. By default the bootstrapper uses a null reporter which does nothing with the report. But it is also be possible to hook in a report generator which creates Visio, Enterprise Architect or ... (you name it!) diagrams. 
+
+A reporter must implement the reporter interface `IReporter`. The reporter receives an `IReportingContext` which contains all necessary information about the bootstrapping process. The custom reporter must be passed upon the construction of the `DefaultBootstrapper<TExtension>`.
+
+{{{
+	new DefaultBootstrapper<ICustomExtension>(... /* Input your IReporter */)
+}}}
+
+The reporting context is structured like the following:
+
+ * Run
+  * Name
+  * Description
+  * Executables
+   * Name
+   * Description
+   * Behaviors
+    * Name
+	* Description
+ * Shutdown
+  * Name
+  * Description
+  * Executables
+   * Name
+   * Description
+   * Behaviors
+    * Name
+	* Description
+ * Extensions
+  * Name
+  * Description
 = Customization =
 TODO
