--- a/wiki/Overview.wiki
+++ b/wiki/Overview.wiki
@@ -1,6 +1,10 @@
 #summary Overview
 #labels Featured
 
+== Bootstrapping ==
+Bootstrapper
+ Bootstrapper provides a simple and flexible way to make your application's startup and shutdown behavior pluggable and extendable.
+
 == Events ==
 
 EventBroker
